--- a/DementiaHelper/DementiaHelper/DementiaHelper/View/ContactList.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/View/ContactList.xaml
@@ -2,15 +2,11 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:DementiaHelper.ViewModel;assembly=DementiaHelper"
+             xmlns:i18n="clr-namespace:DementiaHelper.View;assembly=DementiaHelper"
              x:Class="DementiaHelper.View.ContactList">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
-  <Label Text="{Binding DateTime,
-                        StringFormat='{0:T}'}"
+  <Label Text="{i18n:Translate AddShoppingItems}"
         FontSize="Large"
         HorizontalOptions="Center"
         VerticalOptions="Center">
-    <Label.BindingContext>
-      <local:ClockViewModel />
-    </Label.BindingContext>
   </Label>
 </ContentPage>
