--- a/DementiaHelper/DementiaHelper/DementiaHelper/View/MainPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/View/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:DementiaHelper"
-             x:Class="DementiaHelper.MainPage">
+             x:Class="DementiaHelper.View.MainPage">
 
   <Label Text="Welcome to Xamarin Forms!"
            VerticalOptions="Center"
