--- a/DementiaHelper/DementiaHelper/DementiaHelper/View/ContactList.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/View/ContactList.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:DementiaHelper.ViewModel;assembly=DementiaHelper"
-             xmlns:i18n="clr-namespace:DementiaHelper.View;assembly=DementiaHelper"
+             xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              x:Class="DementiaHelper.View.ContactList">
   <Label Text="{i18n:Translate AddShoppingItems}"
         FontSize="Large"
