--- a/DementiaHelper/DementiaHelper/DementiaHelper/View/LoginPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/View/LoginPage.xaml
@@ -2,5 +2,21 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DementiaHelper.View.LoginPage">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <ContentPage.Content>
+    <Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+      <Label Text="Top Left" Grid.Row="0" Grid.Column="0" />
+      <Label Text="Top Right" Grid.Row="0" Grid.Column="1" />
+      <Label Text="Bottom Left" Grid.Row="1" Grid.Column="0" />
+      <Label Text="Bottom Right" Grid.Row="1" Grid.Column="1" />
+    </Grid>
+  </ContentPage.Content>
 </ContentPage>
