Started database model and function for updating User Profil

--- a/DementiaHelper/DementiaHelper/DementiaHelper/View/EditAccountInformation.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/View/EditAccountInformation.xaml
@@ -4,8 +4,9 @@
              xmlns:extensions="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              x:Class="DementiaHelper.View.EditAccountInformation"
              BackgroundColor="White">
+    
 
-    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Margin="0" Padding="0">
         <StackLayout BackgroundColor="Maroon" VerticalOptions="Start">
             <Label Text="{Binding User.FirstName, StringFormat='{0:N}s oplysninger'}" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="20"></Label>
         </StackLayout>
@@ -34,7 +35,8 @@
             <Label Text="{extensions:Translate Description}" Grid.Row="3" Grid.Column="1"></Label>
             <Editor Text="{Binding User.Description}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Editor>
             <Label Text="{extensions:Translate Picture}" Grid.Row="4" Grid.Column="1"></Label>
-            <Image Source="{Binding User.Picture}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Image>
+            
+                <Image Source="{Binding User.Picture}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Image>
         </Grid>
         <StackLayout VerticalOptions="Start" Orientation="Vertical">
             <Button Text="{extensions:Translate Save}" Command="{Binding SaveCommand}"></Button>
