--- a/DementiaHelper/DementiaHelper/DementiaHelper/View/AccountInformation.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/View/AccountInformation.xaml
@@ -13,10 +13,16 @@
     <StackLayout>
         <StackLayout VerticalOptions="Start" Orientation="Vertical">
             <!-- top controls -->
-            <Button Text="{extensions:Translate Back}" Command="{Binding BackCommand}"></Button>
+            <StackLayout Orientation="Horizontal">
+                <Button Text="{extensions:Translate Back}" Command="{Binding BackCommand}"></Button>
+                <Label Text="{extensions:Translate ProfileSettings}"></Label>
+            </StackLayout>
+            
         </StackLayout>
         <Grid ColumnSpacing="5">
             <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
@@ -30,16 +36,18 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Label Text="{extensions:Translate FirstName}" Grid.Row="0" Grid.Column="1"></Label>
-            <Label Text="{Binding User.FirstName}" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="3"></Label>
-            <Label Text="{extensions:Translate LastName}" Grid.Row="1" Grid.Column="1"></Label>
-            <Label Text="{Binding User.LastName}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3"></Label>
-            <Label Text="{extensions:Translate Email}" Grid.Row="2" Grid.Column="1"></Label>
-            <Label Text="{Binding User.Email}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"></Label>
-            <Label Text="{extensions:Translate Description}" Grid.Row="3" Grid.Column="1"></Label>
-            <Label Text="{Binding User.Description}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Label>
-            <Label Text="{extensions:Translate Picture}" Grid.Row="4" Grid.Column="1"></Label>
-            <Image Source="{Binding User.Picture}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Image>
+            <Label Text="{extensions:Translate EditProfile}" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+            <!--<BoxView Width="1" BackgroundColor="Black" Grid.Row="1" Grid.ColumnSpan="5"></BoxView>-->
+            <Label Text="{extensions:Translate FirstName}" Grid.Row="2" Grid.Column="1"></Label>
+            <Label Text="{Binding User.FirstName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"></Label>
+            <Label Text="{extensions:Translate LastName}" Grid.Row="3" Grid.Column="1"></Label>
+            <Label Text="{Binding User.LastName}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Label>
+            <Label Text="{extensions:Translate Email}" Grid.Row="4" Grid.Column="1"></Label>
+            <Label Text="{Binding User.Email}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Label>
+            <Label Text="{extensions:Translate Description}" Grid.Row="5" Grid.Column="1"></Label>
+            <Label Text="{Binding User.Description}" Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3"></Label>
+            <Label Text="{extensions:Translate Picture}" Grid.Row="6" Grid.Column="1"></Label>
+            <Image Source="{Binding User.Picture}" Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3"></Image>
         </Grid>
         <StackLayout>
             <Button IsEnabled="{Binding Editbutton}" Text="{extensions:Translate EditUserInformation}" Command="{Binding GoToEditAccountInformationCommand}"></Button>
