--- a/DementiaHelper/DementiaHelper/DementiaHelper/View/CreateAccount.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/View/CreateAccount.xaml
@@ -5,21 +5,59 @@
              x:Class="DementiaHelper.View.CreateAccount"
              NavigationPage.HasNavigationBar="false"
              BackgroundColor="Silver">
-  
-  <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-    <StackLayout  Orientation="Vertical" VerticalOptions="Start">
-      <!-- top controls -->
-    </StackLayout>
-    <StackLayout VerticalOptions="CenterAndExpand">
-      <Entry Text="{Binding Email}" Placeholder="{i18n:Translate UserName}" HorizontalOptions="CenterAndExpand" />
-      <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}"  HorizontalOptions="CenterAndExpand" />
-            <Button Command="{Binding CreateAccountCommand}" CommandParameter="{Binding User}" Text="Create Account" />
-        </StackLayout>
-    <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
-      <Button Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" BackgroundColor="Red"></Button>
-    </StackLayout>
-  </StackLayout>
-  
-  
-  
+
+    <ContentPage.Content>
+        <OnIdiom x:TypeArguments="View">
+            <OnIdiom.Phone>
+                <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                    <StackLayout  Orientation="Vertical" VerticalOptions="Start">
+                        <!-- top controls -->
+                    </StackLayout>
+                    <StackLayout VerticalOptions="CenterAndExpand">
+                        <Entry Text="{Binding Email}" Placeholder="{i18n:Translate UserName}" HorizontalOptions="CenterAndExpand" />
+                        <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}"  HorizontalOptions="CenterAndExpand" />
+                        <Button Command="{Binding CreateAccountCommand}" CommandParameter="{Binding User}" Text="Create Account" />
+                    </StackLayout>
+                    <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
+                        <Button Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" BackgroundColor="Red"></Button>
+                    </StackLayout>
+                </StackLayout>
+            </OnIdiom.Phone>
+            <OnIdiom.Tablet>
+                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="0">
+                        <StackLayout  Orientation="Vertical" VerticalOptions="Start">
+                            <!-- top controls -->
+                        </StackLayout>
+                        <StackLayout VerticalOptions="CenterAndExpand">
+                            <Entry Text="{Binding Email}" Placeholder="{i18n:Translate UserName}" HorizontalOptions="CenterAndExpand" />
+                            <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}"  HorizontalOptions="CenterAndExpand" />
+                            <Button Command="{Binding CreateAccountCommand}" CommandParameter="{Binding User}" Text="Create Account" />
+                        </StackLayout>
+                        <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
+                            <Button Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" BackgroundColor="Red"></Button>
+                        </StackLayout>
+                    </StackLayout>
+                    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="1">
+                        <StackLayout  Orientation="Vertical" VerticalOptions="Start">
+                            <Label Text="Extra Information" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand"/>
+                        </StackLayout>
+                        <StackLayout VerticalOptions="CenterAndExpand">
+                            <Entry Text="{Binding Email}" Placeholder="{i18n:Translate UserName}" HorizontalOptions="CenterAndExpand" />
+                            <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}"  HorizontalOptions="CenterAndExpand" />
+                            <Button Command="{Binding CreateAccountCommand}" CommandParameter="{Binding User}" Text="Create Account" />
+                        </StackLayout>
+                    </StackLayout>
+
+                </Grid>
+            </OnIdiom.Tablet>
+        </OnIdiom>
+    </ContentPage.Content>
+
+
 </ContentPage>
