--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
               xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
-             x:Class="DementiaHelper.View.CreateAccount"
+             x:Class="DementiaHelper.Pages.CreateAccountPage"
              NavigationPage.HasNavigationBar="false"
              BackgroundColor="Silver">
 
