--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:extensions="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
-             x:Class="DementiaHelper.View.EditAccountInformation"
+             x:Class="DementiaHelper.Pages.EditAccountInformationPage"
              BackgroundColor="White">
     
 
