--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              xmlns:customRenders="clr-namespace:DementiaHelper.Renders.CustomControlRenders;assembly=DementiaHelper"
-             x:Class="DementiaHelper.View.LoginPage"
+             x:Class="DementiaHelper.Pages.LoginPage"
              BackgroundColor="#00AAC8"
              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
