--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/EditAccountInformationPage.xaml
@@ -4,42 +4,79 @@
              xmlns:extensions="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              x:Class="DementiaHelper.Pages.EditAccountInformationPage"
              BackgroundColor="White">
-    
 
-    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Margin="0" Padding="0">
-        <StackLayout BackgroundColor="Maroon" VerticalOptions="Start">
-            <Label Text="{Binding User.FirstName, StringFormat='{0:N}s oplysninger'}" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" FontSize="20"></Label>
-        </StackLayout>
+    <ScrollView>
+        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Margin="0" Padding="0">
+            <StackLayout VerticalOptions="Start">
+                <Label Text="{extensions:Translate EditProfile}" HorizontalOptions="Center" FontSize="16"></Label>
+                <!--{Binding User.FirstName, StringFormat='{0:N}s oplysninger'} Skal måske bruge dette senere-->
+            </StackLayout>
 
-        <Grid ColumnSpacing="5">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="30" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Label Text="{extensions:Translate FirstName}" Grid.Row="0" Grid.Column="1"></Label>
-            <Entry Text="{Binding User.FirstName}" Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
-            <Label Text="{extensions:Translate LastName}" Grid.Row="1" Grid.Column="1"></Label>
-            <Entry Text="{Binding User.LastName}" Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
-            <Label Text="{extensions:Translate Email}" Grid.Row="2" Grid.Column="1"></Label>
-            <Entry Text="{Binding User.Email}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
-            <Label Text="{extensions:Translate Description}" Grid.Row="3" Grid.Column="1"></Label>
-            <Editor Text="{Binding User.Description}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Editor>
-            <Label Text="{extensions:Translate Picture}" Grid.Row="4" Grid.Column="1"></Label>
-            <Image Source="{Binding User.Picture}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Image>
-        </Grid>
-        <StackLayout VerticalOptions="Start" Orientation="Vertical">
-            <Button Text="{extensions:Translate Save}" Command="{Binding SaveCommand}"></Button>
-            <Button Text="{extensions:Translate Cancel}" Command="{Binding CancelCommand}"></Button>
+            <Grid ColumnSpacing="5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="1" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="1" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="1" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="30" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+
+                <Label Text="{extensions:Translate PersonalDetails}" VerticalOptions="End" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+
+                <!--This is used as a seperator line in the grid-->
+                <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4"/>
+
+                <Label Text="{extensions:Translate FirstName}" VerticalOptions="Center" Grid.Row="2" Grid.Column="1"></Label>
+                <Entry Text="{Binding User.FirstName}" Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+
+                <Label Text="{extensions:Translate LastName}" VerticalOptions="Center" Grid.Row="3" Grid.Column="1"></Label>
+                <Entry Text="{Binding User.LastName}" Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+
+                <Label Text="{extensions:Translate Description}" VerticalOptions="Center" Grid.Row="4" Grid.Column="1"></Label>
+                <Editor Text="{Binding User.Description}" Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"></Editor>
+
+
+
+                <Label Text="{extensions:Translate ContactDetails}" VerticalOptions="End" Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+
+                <!--This is used as a seperator line in the grid-->
+                <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4"/>
+
+                <Label Text="{extensions:Translate Email}" VerticalOptions="Center" Grid.Row="7" Grid.Column="1"></Label>
+                <Entry Text="{Binding User.Email}" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+
+                <Label Text="{extensions:Translate Phone}" VerticalOptions="Center" Grid.Row="8" Grid.Column="1"></Label>
+                <Entry Text="{Binding User.Phone}" Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3"></Entry>
+
+
+
+                <Label Text="{extensions:Translate Picture}" VerticalOptions="End" Grid.Row="9" Grid.Column="1" Grid.ColumnSpan="4"></Label>
+
+                <!--This is used as a seperator line in the grid-->
+                <BoxView HeightRequest="1" BackgroundColor="Black" Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="4"/>
+
+                <Image Source="{Binding User.Picture}" Grid.Row="11" Grid.Column="2" Grid.ColumnSpan="2"></Image>
+
+            </Grid>
+            <StackLayout VerticalOptions="Start" Orientation="Vertical">
+                <Button Text="{extensions:Translate Save}" Command="{Binding SaveCommand}"></Button>
+                <Button Text="{extensions:Translate Cancel}" Command="{Binding CancelCommand}"></Button>
+            </StackLayout>
         </StackLayout>
-    </StackLayout>
+    </ScrollView>
 </ContentPage>
