--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/LoginPage.xaml
@@ -56,7 +56,7 @@
                                         <TapGestureRecognizer Command="{Binding GoToCreateAccountCommand}"></TapGestureRecognizer>
                                     </Label.GestureRecognizers>
                                 </Label>
-                                <Label HorizontalOptions="EndAndExpand" TextColor="Blue" Text="Account Information">
+                                <Label HorizontalOptions="EndAndExpand" TextColor="Blue" Text="Account Info">
                                     <Label.GestureRecognizers>
                                         <TapGestureRecognizer Command="{Binding GoToAccountInformationCommand}"></TapGestureRecognizer>
                                     </Label.GestureRecognizers>
