--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/CreateAccountPage.xaml
@@ -4,20 +4,27 @@
               xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              x:Class="DementiaHelper.Pages.CreateAccountPage"
              NavigationPage.HasNavigationBar="false"
-             BackgroundColor="Silver">
+             BackgroundColor="#ffffff">
 
     <ContentPage.Content>
         <OnIdiom x:TypeArguments="View">
             <OnIdiom.Phone>
                 <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                    <StackLayout  Orientation="Vertical" VerticalOptions="Start">
-                        <!-- top controls -->
+                    <StackLayout x:Name="outerStack" VerticalOptions="Start" >
+                        <StackLayout  Orientation="Vertical" VerticalOptions="Start">
+                            <Image x:Name="imageElderlyHands" Source="elderlyhands.png" ></Image>
+                        </StackLayout>
+                        <StackLayout x:Name="secondInnerStack" VerticalOptions="CenterAndExpand">
+                            <Entry Text="{Binding User.Email}" Placeholder="{i18n:Translate UserName}" HorizontalOptions="CenterAndExpand" />
+                            <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}"  HorizontalOptions="CenterAndExpand" />
+                        </StackLayout>
                     </StackLayout>
-                    <StackLayout VerticalOptions="CenterAndExpand">
-                        <Entry Text="{Binding User.Email}" Placeholder="{i18n:Translate UserName}" HorizontalOptions="CenterAndExpand" />
-                        <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}"  HorizontalOptions="CenterAndExpand" />
-                        <Button Command="{Binding CreateAccountCommand}" CommandParameter="{Binding User}" Text="Create Account" />
+                    <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
+                        <Label Text="Opret konto som:" Font="Bold"></Label>
+                        <Picker x:Name="rolePicker" SelectedIndexChanged="rolePicker_SelectedIndexChanged" Title="Role"  ></Picker> <!-- In code behind since functionality to do it in xaml does not exist till xamarin.forms nuget 2.3.4-pre1 and since that nuget is not stable we wont install yet-->
+                        <Button Style="{StaticResource buttonStyle}" Command="{Binding CreateAccountCommand}" CommandParameter="{Binding User}" Text="Create Account" />
                     </StackLayout>
+
                     <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
                         <Button Text="{i18n:Translate Cancel}"  Command="{Binding CancelCreateAccountCommand}" BackgroundColor="Red"></Button>
                     </StackLayout>
@@ -48,9 +55,7 @@
                             <Label Text="Extra Information" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand"/>
                         </StackLayout>
                         <StackLayout VerticalOptions="CenterAndExpand">
-                            <Entry Text="{Binding User.Email}" Placeholder="{i18n:Translate UserName}" HorizontalOptions="CenterAndExpand" />
-                            <Entry Text="{Binding Password}" IsPassword="true"  Placeholder="{i18n:Translate Password}"  HorizontalOptions="CenterAndExpand" />
-                            <Button Command="{Binding CreateAccountCommand}" CommandParameter="{Binding User}" Text="Create Account" />
+
                         </StackLayout>
                     </StackLayout>
                     <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="1">
@@ -63,6 +68,4 @@
             </OnIdiom.Tablet>
         </OnIdiom>
     </ContentPage.Content>
-
-
 </ContentPage>
