Migration and some other changes

--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ShoppingListPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ShoppingListPage.xaml
@@ -6,6 +6,7 @@
              BackgroundColor="White">
 
   <StackLayout>
+    <Button Command="{Binding UpdateCommand}" Text="{extensions:Translate Login}" />
     <ListView ItemsSource="{Binding ShoppingList.ShoppingListDetails}">
       <ListView.Header>
         <Grid ColumnSpacing="4">
