--- a/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ConnectToCitizenPage.xaml
+++ b/DementiaHelper/DementiaHelper/DementiaHelper/Pages/ConnectToCitizenPage.xaml
@@ -4,17 +4,32 @@
               xmlns:i18n="clr-namespace:DementiaHelper.Extensions;assembly=DementiaHelper"
              x:Class="DementiaHelper.Pages.ConnectToCitizenPage"
               BackgroundColor="White"
+             Title="Opret forbindelse til borger"
              NavigationPage.HasNavigationBar="True">
 
 
-    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-        <StackLayout  Orientation="Vertical" VerticalOptions="Start">
 
-        </StackLayout>
-        <StackLayout VerticalOptions="CenterAndExpand">
-            <Label Font="Bold" Text="Indtast dement id, se Idet i den dementes account information"></Label>
-            <Entry Placeholder="{i18n:Translate CitizenId}" ></Entry>
-            <Button  Style="{StaticResource buttonStyle}" Text="Connect"></Button>
-        </StackLayout>
-    </StackLayout>
+    <OnIdiom x:TypeArguments="View">
+        <OnIdiom.Phone>
+            <StackLayout  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <StackLayout x:Name="outerStack" VerticalOptions="Start" >
+                    <StackLayout Orientation="Vertical" VerticalOptions="Start" >
+                        <Image   x:Name="imageElderlyHands" Source="elderlyhands.png" ></Image>
+                    </StackLayout>
+                    <StackLayout x:Name="secondInnerStack" VerticalOptions="CenterAndExpand">
+                        <Entry Placeholder="{i18n:Translate CitizenId}" ></Entry>
+                        <Label Font="Bold" Text="Indtast dement id, se Idet i den dementes account information"></Label>
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout Orientation="Vertical" Spacing="0"  VerticalOptions="CenterAndExpand" >
+                    <Button  Style="{StaticResource buttonStyle}" Text="Connect"></Button>
+                </StackLayout>
+
+                <StackLayout Orientation="Vertical" Spacing="0" VerticalOptions="End">
+
+                </StackLayout>
+            </StackLayout>
+        </OnIdiom.Phone>
+
+    </OnIdiom>
 </ContentPage>
